7、接口编写，多余文件删除

--- a/src/main/profiles/dev/application.properties
+++ b/src/main/profiles/dev/application.properties
@@ -51,7 +51,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 本地源
 spring.datasource.db1.username=root
 spring.datasource.db1.password=wkofu123
-spring.datasource.db1.url=jdbc:mysql://localhost:3306/wko?serverTimezone=UTC
+spring.datasource.db1.url=jdbc:mysql://localhost:3306/interview?serverTimezone=UTC
 
 # 远程源
 spring.datasource.db2.username=root
